logs/iw.recipe.subversion.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/iw'...
Listing './lib/python3.5/site-packages/iw/recipe'...
Listing './lib/python3.5/site-packages/iw/recipe/subversion'...
Compiling './lib/python3.5/site-packages/iw/recipe/subversion/__init__.py'...
***   File "./lib/python3.5/site-packages/iw/recipe/subversion/__init__.py", line 98
    print 'Creating archive: %s' % archive_name
                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/iw/recipe/subversion/tests'...
Listing './lib/python3.5/site-packages/iw/recipe/subversion/tests/repos'...
Listing './lib/python3.5/site-packages/iw/recipe/subversion/tests/repos/conf'...
Listing './lib/python3.5/site-packages/iw/recipe/subversion/tests/repos/db'...
Listing './lib/python3.5/site-packages/iw/recipe/subversion/tests/repos/db/revprops'...
Listing './lib/python3.5/site-packages/iw/recipe/subversion/tests/repos/db/revs'...
Listing './lib/python3.5/site-packages/iw/recipe/subversion/tests/repos/hooks'...
Listing './lib/python3.5/site-packages/iw/recipe/subversion/tests/repos/locks'...
Listing './lib/python3.5/site-packages/iw.recipe.subversion-0.3.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zc'...
Listing './lib/python3.5/site-packages/zc/buildout'...
Listing './lib/python3.5/site-packages/zc.buildout-2.10.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
